--- a/package.json
+++ b/package.json
@@ -12,16 +12,23 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^4.0.2",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
     "@angular/core": "^4.0.0",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
+    "@angular/material": "^2.0.0-beta.3",
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/svg.js": "^0.0.17",
+    "angularfire2": "^2.0.0-beta.8",
     "core-js": "^2.4.1",
+    "firebase": "^3.7.8",
+    "hammerjs": "^2.0.8",
     "rxjs": "^5.1.0",
+    "svg.js": "^2.4.0",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
@@ -35,9 +42,9 @@
     "karma": "~1.4.1",
     "karma-chrome-launcher": "~2.0.0",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
