--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "@angular/platform-browser": "^4.0.2",
     "@angular/platform-browser-dynamic": "^4.0.2",
     "@angular/router": "^4.0.2",
-    "@types/svg.js": "^2.3.1",
     "angularfire2": "^4.0.0-rc0",
     "core-js": "^2.4.1",
+    "fabric": "^1.7.9",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.3.0",
     "svg.js": "^2.5.3",
