--- a/package.json
+++ b/package.json
@@ -12,30 +12,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.2",
-    "@angular/common": "^4.0.2",
-    "@angular/compiler": "^4.0.2",
-    "@angular/core": "^4.0.2",
-    "@angular/forms": "^4.0.2",
-    "@angular/http": "^4.0.2",
+    "@angular/animations": "^4.0.3",
+    "@angular/common": "^4.0.3",
+    "@angular/compiler": "^4.0.3",
+    "@angular/core": "^4.0.3",
+    "@angular/forms": "^4.0.3",
+    "@angular/http": "^4.0.3",
     "@angular/material": "^2.0.0-beta.3",
-    "@angular/platform-browser": "^4.0.2",
-    "@angular/platform-browser-dynamic": "^4.0.2",
-    "@angular/router": "^4.0.2",
+    "@angular/platform-browser": "^4.0.3",
+    "@angular/platform-browser-dynamic": "^4.0.3",
+    "@angular/router": "^4.0.3",
     "angularfire2": "^4.0.0-rc0",
     "core-js": "^2.4.1",
-    "fabric": "^1.7.9",
+    "fabric": "^2.0.0-beta0",
+    "firebase": "3.8.0",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.3.0",
-    "svg.js": "^2.5.3",
-    "zone.js": "^0.8.5"
+    "svg.js": "^2.6.0",
+    "zone.js": "^0.8.8"
   },
   "devDependencies": {
     "@angular/cli": "1.0.0",
-    "@angular/compiler-cli": "^4.0.2",
+    "@angular/compiler-cli": "^4.0.3",
     "@types/jasmine": "2.5.47",
     "@types/node": "~7.0.13",
-    "codelyzer": "~2.1.1",
+    "codelyzer": "~3.0.0",
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~4.0.0",
     "karma": "~1.6.0",
